--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-navigation-bar": "^0.2.1",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
