--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-navigation-bar": "^0.2.1",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.0",
+    "react-navigation-tabs": "^2.5.6",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
