--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-maps": "~0.25.0",
     "react-native-navigation-bar": "^0.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
