--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-maps-directions": "^1.7.3",
     "react-native-navigation-bar": "^0.2.1",
     "react-native-reanimated": "~1.2.0",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
