--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/react-native-snap-carousel": "^3.7.4",
+    "carousel": "^0.0.3",
     "expo": "^35.0.0",
     "expo-linear-gradient": "~7.0.0",
     "react": "16.8.3",
