--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-maps-directions": "^1.7.3",
+    "react-native-modal": "^11.5.6",
     "react-native-navigation-bar": "^0.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-scalable-image": "^1.0.0",
