--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
