--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
   },
   "dependencies": {
     "@types/react-native-snap-carousel": "^3.7.4",
-    "expo": "^35.0.0",
-    "expo-linear-gradient": "~7.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "expo": "^40.0.0",
+    "expo-linear-gradient": "~8.4.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "~0.25.0",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.7.3",
     "react-native-modal": "^11.5.6",
     "react-native-navigation-bar": "^0.2.1",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-scalable-image": "^1.0.0",
-    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.0",
     "react-navigation-tabs": "^2.5.6",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
