--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-native-snap-carousel": "^3.7.4",
     "expo": "^40.0.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-splash-screen": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
