--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Rice Public Art",
+    "name": "Rice Art",
     "slug": "moody",
     "privacy": "public",
     "platforms": [
