--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "platforms": [
       "ios"
     ],
-    "version": "1.0.2",
+    "version": "1.0.3",
     "orientation": "portrait",
     "icon": "./assets/iconSmall.png",
     "splash": {
@@ -14,6 +14,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "permissions": ["ACCESS_FINE_LOCATION"],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
